# merge-pdf

./: .gitignore  .pre-commit-config.yaml  README.md  merge_pdf.py  requirements-dev.txt  setup.cfg
