[metadata]
name = merge pdf
version = 0.0.1
description = merge your pdfs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dominiquegarmier/merge-pdf
author = Dominique F. Garmier
auther_email = dominique@garmier.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython


[options]
py_modules = merge_pdf
python_requires = >=3.10
install_requires =
    pypdf2

[options.entry_points]
console_scripts =
    merge-pdf = merge_pdf:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
